<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/colorPrimary">
    <include layout="@layout/common_header"/>
    <TextView

        android:layout_marginTop="@dimen/big_ic_item_height"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:id="@+id/tv_login"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="重置密码"
        android:textSize="@dimen/font_size_extreme"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:orientation="vertical">


        <LinearLayout
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_item_padding_Left"
            android:layout_marginRight="@dimen/common_item_padding_Left"
            android:layout_marginTop="@dimen/common_item_small_padding"
            android:layout_marginBottom="@dimen/common_item_small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/color_black"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/mobile" />

            <EditText
                android:background="@null"
                android:id="@+id/mobile_edit_text"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_hint" />

        </LinearLayout>
        <ImageView
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@mipmap/dev_common_bottom_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_item_padding_Left"
            android:layout_marginRight="@dimen/common_item_padding_Left"
            android:layout_marginTop="@dimen/common_item_small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/color_black"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:background="@null"
                android:inputType="textPassword"
                android:id="@+id/code_edit_text"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint" />



        </LinearLayout>

        <ImageView
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@mipmap/dev_common_bottom_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_item_padding_Left"
            android:layout_marginRight="@dimen/common_item_padding_Left"
            android:layout_marginTop="@dimen/common_item_small_padding"
            android:layout_marginBottom="@dimen/common_item_small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <TextView
                android:textColor="@color/color_black"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="短信验证码" />

            <EditText
                android:background="@null"
                android:inputType="textPassword"
                android:id="@+id/et_verify_code"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:hint="验证码" />
            <TextView
                android:id="@+id/tv_get_verification"
                android:text="获取验证码"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textColor="@color/color_blue100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/common_item_small_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:textSize="@dimen/font_size_normal"
            android:textColor="@color/color_white"
            android:layout_marginRight="@dimen/common_item_small_padding"
            android:background="@color/color_blue100"
            android:id="@+id/reset_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="重置密码" />
        <Button
            android:textSize="@dimen/font_size_normal"
            android:textColor="@color/color_white"
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/color_blue100"
            android:layout_height="wrap_content"
            android:text="返回" />
    </LinearLayout>
</LinearLayout>